--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet"> 
     <link href="./css/custom.css" rel="stylesheet">
     <title>Apply AI</title>
@@ -143,47 +144,97 @@
 
     <!-- Reviews -->
     <section class="reviews my-5">
-        <div class="container">
-            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
-                <div class="col-12 col-md-6 offset-md-1">
-                    <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="./images/carusel2.jpg" class="d-block w-50 review__img" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <img src="./images/carusel3.jpg" class="d-block w-50 review__img" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./images/carusel4.jpg" class="d-block w-50 review__img" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
-                        </div>
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+        <div class="container reviews__container">
+          <div class="row">
+            <div class="col-12 col-md-4 mb-5 mb-md-0">
+              <h2 class="text-dark-blue-custom">Stories from our customers</h2>
+              <p class="text-grey-custom">
+                When you get staright to the point the presentation looks attractive.
+              </p>
             </div>
+            <div class="col-12 col-md-6 offset-md-1">
+              <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <!-- Carousel item 1 -->
+                  <div class="carousel-item active">
+                    <div>
+                      <img src="./images/quote.svg" alt="Quote svg" style="width: 60px;" class="float-start pe-2">
+                      <p class="text-grey-custom lh-lg">
+                        Pariatur cliche reprehenderit, enim eiusmod high life accusamus terry 
+                        richardson ad squid. We use Connect for key for easy and seamless 
+                        weekly communication with our clients.
+                      </p>
+                    </div>
+                    <div class="d-flex align-items-center mt-4">
+                      <img src="./images/welcome-3 1(1).png" alt="Review 1" style="width: 60px;" class="rounded-circle">
+                      <div class="ps-2">
+                        <p class="mb-1">
+                          <strong>Marty McFly</strong>
+                        </p>
+                        <p class="mb-0 text-grey-custom">
+                          Head of OP,
+                          <a href="#" class="text-decoration-none text-blue-custom">Future LLC</a>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- /Carousel item 1 -->
+  
+                  <!-- Carousel item 2 -->
+                  <div class="carousel-item">
+                    <div>
+                      <img src="./images/quote.svg" alt="Quote svg" style="width: 60px;" class="float-start pe-2">
+                      <p class="text-secondary lh-lg">
+                        Pariatur cliche reprehenderit, enim eiusmod high life accusamus terry 
+                        richardson ad squid. We use Connect for key for easy and seamless 
+                        weekly communication with our clients.
+                      </p>
+                    </div>
+                    <div class="d-flex align-items-center mt-4">
+                      <img src="./images/welcome-3 1(2).png" alt="Review 1" style="width: 60px;" class="rounded-circle">
+                      <div class="ps-2">
+                        <p class="mb-1">
+                          <strong>Dr. Strange</strong>
+                        </p>
+                        <p class="mb-0 text-secondary">
+                          CTO,
+                          <a href="#" class="text-decoration-none">Arma Systems</a>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- /Carousel item 2 -->
+  
+                  <!-- Carousel item 3 -->
+                  <div class="carousel-item">
+                    <div>
+                      <img src="./images/quote.svg" alt="Quote svg" style="width: 60px;" class="float-start pe-2">
+                      <p class="text-secondary lh-lg">
+                        Pariatur cliche reprehenderit, enim eiusmod high life accusamus terry 
+                        richardson ad squid. We use Connect for key for easy and seamless 
+                        weekly communication with our clients.
+                      </p>
+                    </div>
+                    <div class="d-flex align-items-center mt-4">
+                      <img src="./images/welcome-3 1(3).png" alt="Review 1" style="width: 60px;" class="rounded-circle">
+                      <div class="ps-2">
+                        <p class="mb-1">
+                          <strong>John Kennedy</strong>
+                        </p>
+                        <p class="mb-0 text-secondary">
+                          CTO,
+                          <a href="#" class="text-decoration-none">Optima Corp</a>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- /Carousel item 3 -->
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-    </section>
+      </section>
     <!-- /Review -->
 
     <!--footer-->
